--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
 
    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+     
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <title>S-Assignment!</title>
   </head>
   <body>
